--- a/projeto-sabespe/src/app/pages/perfil-centro/perfil-centro.component.html
+++ b/projeto-sabespe/src/app/pages/perfil-centro/perfil-centro.component.html
@@ -35,9 +35,9 @@
   <div class="text-geral absoluto text-wrapper-16">Total de Economias</div>
   <img class="absoluto group-2" src="assets/vc-sabia.png" [routerLink]="['/voce-sabia']"  />
   <div class="text-geral absoluto text-wrapper-17">Ligações de Esgoto</div>
-  <img class="botao absoluto vector" src="assets/gif/ICONES_seta-esq.gif" [routerLink]="['/menu']" />
+  <img class="botao absoluto vector" src="assets/gif/ICONES_seta-esq.gif" [routerLink]="['/super-centro']" />
   <img class="botao absoluto group-3" src="assets/gif/ICONES_X.gif" [routerLink]="['/inicio']" />
-  <img class="botao absoluto vector-2" src="assets/gif/ICONES_seta-dir.gif" [routerLink]="['/mapa']" />
+  <img class="botao absoluto vector-2" src="assets/gif/ICONES_seta-dir.gif" [routerLink]="['/menu']" />
   <img class="botao absoluto group-4" src="assets/gif/ICONES_casa.gif" [routerLink]="['/menu']" />
   <img class="frame-4" src="assets/linha-colorida.png" />
 </div>
