--- a/projeto-sabespe/src/app/pages/processo-ase/processo-ase.component.html
+++ b/projeto-sabespe/src/app/pages/processo-ase/processo-ase.component.html
@@ -24,7 +24,7 @@
   </div>   
   <img class="img" src="assets/gif/ICONES_seta-esq.gif" [routerLink]="['/processo-irfa']" />
   <img class="group-2" src="assets/gif/ICONES_X.gif" [routerLink]="['/inicio']" />
-  <img class="group-4" src="assets/gif/ICONES_X.gif" [routerLink]="['/tela-botoes']" />
+  <img class="group-4" src="assets/gif/ICONES_seta-check.gif" [routerLink]="['/tela-botoes']" />
   <img class="frame" src="assets/linha-colorida.png" />
   <img class="group-3" src="assets/gif/ICONES_casa.gif" [routerLink]="['/menu']" />
   <img class="vector-2" src="assets/gif/ICONES_seta-dir.gif" [routerLink]="['/processo-cmc']" />
