--- a/projeto-sabespe/src/app/pages/processo-iprp/processo-iprp.component.html
+++ b/projeto-sabespe/src/app/pages/processo-iprp/processo-iprp.component.html
@@ -1,7 +1,7 @@
 <div class="div">
   <div class="overlap-group">
     <div class="metas-contratuais">IPRP</div>
-    <div class="s-o-paulo">Índice de Prazo de Reposição de Pavimento</div>
+    <div class="s-o-paulo">Indicador de Prazo de Reposição de Pavimento</div>
   </div>
   <img class="ativo" src="assets/grafismo-2.png" />
   <img class="seta" *ngIf="sentido == 'Maior'" src="assets/seta-cima.png" />
@@ -24,7 +24,7 @@
   </div>    
   <img class="img" src="assets/gif/ICONES_seta-esq.gif" [routerLink]="['/processo-igq']" />
   <img class="group-2" src="assets/gif/ICONES_X.gif" [routerLink]="['/inicio']" />
-  <img class="group-4" src="assets/gif/ICONES_X.gif" [routerLink]="['/tela-botoes']" />
+  <img class="group-4" src="assets/gif/ICONES_seta-check.gif" [routerLink]="['/tela-botoes']" />
   <img class="frame" src="assets/linha-colorida.png" />
   <img class="group-3" src="assets/gif/ICONES_casa.gif" [routerLink]="['/menu']" />
   <img class="vector-2" src="assets/gif/ICONES_seta-dir.gif" [routerLink]="['/processo-iact']" />
