--- a/projeto-sabespe/src/app/pages/tela-botoes/tela-botoes.component.html
+++ b/projeto-sabespe/src/app/pages/tela-botoes/tela-botoes.component.html
@@ -18,6 +18,7 @@
     <img class="frame-80 frame-12" src="assets/tela-botoes/Frame-43.png" [routerLink]="['/processo-ipdt']" />
     <img class="frame-80 frame-13" src="assets/tela-botoes/Frame-45.png" [routerLink]="['/processo-idg']" />
     <img class="frame-80 frame-14" src="assets/tela-botoes/Frame-46.png" [routerLink]="['/processo-isc']" />
+    <img class="frame-80 frame-30" src="assets/tela-botoes/Frame-66.png" [routerLink]="['/processo-vp']" />
     <img class="frame-80 frame-15" src="assets/tela-botoes/Frame-47.png" [routerLink]="['/processo-iep']" />
     <img class="frame-80 frame-16" src="assets/tela-botoes/Frame-44.png" [routerLink]="['/processo-iec']" />
     <img class="frame-80 frame-17" src="assets/tela-botoes/Frame-48.png" [routerLink]="['/processo-ieam']" />
