--- a/projeto-sabespe/src/app/pages/voce-sabia/voce-sabia.component.html
+++ b/projeto-sabespe/src/app/pages/voce-sabia/voce-sabia.component.html
@@ -17,9 +17,9 @@
       <img class="mask-group" src="assets/sabia-oc.png" /> <img class="img" src="assets/sabia-oc-2.png" />
     </div>
   </div>
-  <img class="vector" src="assets/gif/ICONES_seta-esq.gif" [routerLink]="['/inicio']" />
+  <img class="vector" src="assets/gif/ICONES_seta-esq.gif" [routerLink]="['/super-centro']" />
   <img class="group-2" src="assets/gif/ICONES_X.gif" [routerLink]="['/inicio']" />
   <img class="frame" src="assets/linha-colorida.png" />
   <img class="group-3" src="assets/gif/ICONES_casa.gif" [routerLink]="['/menu']" />
-  <img class="vector-2" src="assets/gif/ICONES_seta-dir.gif" [routerLink]="['/inicio']" />
+  <img class="vector-2" src="assets/gif/ICONES_seta-dir.gif" [routerLink]="['/menu']" />
 </div>
