--- a/projeto-sabespe/src/app/pages/processo-iep/processo-iep.component.html
+++ b/projeto-sabespe/src/app/pages/processo-iep/processo-iep.component.html
@@ -27,7 +27,7 @@
   <img class="group-4" src="assets/gif/ICONES_seta-check.gif" [routerLink]="['/tela-botoes']" />
   <img class="frame" src="assets/linha-colorida.png" />
   <img class="group-3" src="assets/gif/ICONES_casa.gif" [routerLink]="['/menu']" />
-  <img class="vector-2" src="assets/gif/ICONES_seta-dir.gif" [routerLink]="['/processo-iec']" />
+  <img class="vector-2" src="assets/gif/ICONES_seta-dir.gif" [routerLink]="['/processo-vp']" />
 </div>
 
 
