--- a/projeto-sabespe/src/app/pages/processo-touv/processo-touv.component.html
+++ b/projeto-sabespe/src/app/pages/processo-touv/processo-touv.component.html
@@ -1,7 +1,7 @@
 <div class="div">
   <div class="overlap-group">
     <div class="metas-contratuais">TOUV</div>
-    <div class="s-o-paulo">Taxa de Ouvidorias Atendidas no Prazo(%)</div>
+    <div class="s-o-paulo">Taxa de Ouvidorias Atendidas no Prazo</div>
   </div>
   <img class="ativo" src="assets/grafismo-2.png" />
   <img class="seta" *ngIf="sentido == 'Maior'" src="assets/seta-cima.png" />
