--- a/projeto-sabespe/src/app/pages/processo-vp/processo-vp.component.html
+++ b/projeto-sabespe/src/app/pages/processo-vp/processo-vp.component.html
@@ -21,12 +21,12 @@
       [legendPosition]="legendPosition">
     </ngx-charts-bar-vertical-2d>
   </div>  
-  <img class="img" src="assets/gif/ICONES_seta-esq.gif" [routerLink]="['/capa-sp']" />
+  <img class="img" src="assets/gif/ICONES_seta-esq.gif" [routerLink]="['/processo-iep']" />
   <img class="group-2" src="assets/gif/ICONES_X.gif" [routerLink]="['/inicio']" />
   <img class="group-4" src="assets/gif/ICONES_seta-check.gif" [routerLink]="['/tela-botoes']" />
   <img class="frame" src="assets/linha-colorida.png" />
   <img class="group-3" src="assets/gif/ICONES_casa.gif" [routerLink]="['/menu']" />
-  <img class="vector-2" src="assets/gif/ICONES_seta-dir.gif" [routerLink]="['/capa-sa']" />
+  <img class="vector-2" src="assets/gif/ICONES_seta-dir.gif" [routerLink]="['/processo-iec']" />
 </div>
 
 
