--- a/projeto-sabespe/src/app/pages/processo-iec/processo-iec.component.html
+++ b/projeto-sabespe/src/app/pages/processo-iec/processo-iec.component.html
@@ -22,7 +22,7 @@
       [legendPosition]="legendPosition">
     </ngx-charts-bar-vertical-2d>
   </div>   
-  <img class="img" src="assets/gif/ICONES_seta-esq.gif" [routerLink]="['/processo-iep']" />
+  <img class="img" src="assets/gif/ICONES_seta-esq.gif" [routerLink]="['/processo-vp']" />
   <img class="group-2" src="assets/gif/ICONES_X.gif" [routerLink]="['/inicio']" />
   <img class="group-4" src="assets/gif/ICONES_seta-check.gif" [routerLink]="['/tela-botoes']" />
   <img class="frame" src="assets/linha-colorida.png" />
